--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,10 @@
+FROM maven:3.9.2-eclipse-temurin-17 AS builder
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY backend/target/namjai-backend-1.0.0.jar app.jar
-EXPOSE 8080
+COPY --from=builder /app/target/namjai-backend-1.0.0.jar app.jar
+EXPOSE 8082 
 ENTRYPOINT ["java", "-jar", "app.jar"]
