--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,9 +25,9 @@ resend.from.email=onboarding@resend.dev
 # =========================
 # ? Twilio SMS Settings
 # =========================
-twilio.account_sid=AC8d734988f9a40fc3b5b3c23982b5a6c5
-twilio.auth_token=eb643d3c0415652e7e3f56472b4e33c0
-twilio.phone_number=+17433306249
+#twilio.account_sid=
+#twilio.auth_token=
+#twilio.phone_number=
 
 
 # =========================
