--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,7 +25,12 @@ resend.from.email=onboarding@resend.dev
 # =========================
 # ? Twilio SMS Settings
 # =========================
-    
+twilio.account_sid=dummy
+twilio.auth_token=dummy
+twilio.phone_number=10000000000
+sms.enabled=false
+
+
 # =========================
 # ? Logging
 # =========================
